Fix some horizonal spacing

--- a/module2-solution/styles.css
+++ b/module2-solution/styles.css
@@ -35,6 +35,7 @@ div.row {
 	border: 1px solid black;
 	margin:10px;
 	background-color:lightgrey;
+	float:left; /*I TRIED ADDING IT HERE. IF THIS DOESN'T WORK, REMOVE THIS AND ADD BACK AT THE BOTTOM*/
 }
 
 .row > div > p {
@@ -63,15 +64,15 @@ section#SushiHeader {
 
 @media (min-width: 992px) {
 	div.large-3-columns {
-		width:30%;
-		float:left;
+		width:31.2%;
+		/*float:left;*/
 	}
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
 	.medium-2-columns {
-		width:47%;
-		float:left
+		width:47.3%;
+		/*float:left*/
 	}
  }
 
